--- a/index.html
+++ b/index.html
@@ -885,7 +885,7 @@
         // Create mailto link
         const subject = `New Contact Form Submission from ${name}`;
         const body = `Name: ${name}%0D%0AEmail: ${email}%0D%0APhone: ${phone}%0D%0AMessage: ${message}`;
-        const mailtoLink = `mailto:sadhnakumari55555@gmail.com?subject=${encodeURIComponent(subject)}&body=${body}`;
+        const mailtoLink = `mailto:ssruniversepromotion@gmail.com?subject=${encodeURIComponent(subject)}&body=${body}`;
         
         // Open default email client
         window.location.href = mailtoLink;
