--- a/index.html
+++ b/index.html
@@ -711,19 +711,19 @@
                   <p style="font-size: 16px; margin: 5px 0">
                     <strong>Email:</strong>
                     <a
-                      href="mailto:satyamsingh57793@gmail.com"
-                      style="color: #0066cc; text-decoration: none"
-                      >satyamsingh57793@gmail.com</a
-                    >
+                      href="mailto:ssruniversepromotion@gmail.com"
+                      style="color: #0f2c53 ; text-decoration: none; font-weight: bold;"
+                      >ssruniversepromotion@gmail.com
+                    
                   </p>
-                  <p style="font-size: 16px; margin: 5px 0">
+                  <!-- <p style="font-size: 16px; margin: 5px 0">
                     <strong>Contact:</strong>
                     <a
                       href="tel:+917808719803"
                       style="color: #0066cc; text-decoration: none"
                       >7808719803</a
                     >
-                  </p>
+                  </p> -->
                 </div>
               </div>
             </div>
