--- a/index.html
+++ b/index.html
@@ -712,18 +712,18 @@
                     <strong>Email:</strong>
                     <a
                       href="mailto:ssruniversepromotion@gmail.com"
-                      style="color: #0f2c53 ; text-decoration: none; font-weight: bold;"
+                      style="color:#06295a ; text-decoration: none; font-weight: bold;"
                       >ssruniversepromotion@gmail.com
                     
                   </p>
-                  <!-- <p style="font-size: 16px; margin: 5px 0">
-                    <strong>Contact:</strong>
+                  <p style="font-size: 16px; margin: 5px 0">
+                    <strong></strong>
                     <a
                       href="tel:+917808719803"
                       style="color: #0066cc; text-decoration: none"
-                      >7808719803</a
+                      ></a
                     >
-                  </p> -->
+                  </p>
                 </div>
               </div>
             </div>
